@@ -20,7 +20,6 @@
 package com.kunzisoft.keepass.notifications
 
 import android.content.Intent
-import com.kunzisoft.keepass.timeout.TimeoutHelper
 import com.kunzisoft.keepass.utils.LockReceiver
 import com.kunzisoft.keepass.utils.registerLockReceiver
 import com.kunzisoft.keepass.utils.unregisterLockReceiver
